Add proper captive portal detection for iOS/Android/Windows
- Added DNS redirects for all platform detection URLs
- Updated nginx to handle Windows NCSI, Android 204, Apple requests
- Added DNS setup script that injects redirects into dnsmasq
- Configured systemd service to run DNS setup after hotspot starts

Platforms now properly detect captive portal and trigger popup:
- iOS/macOS: captive.apple.com, apple.com domains
- Android: google.com, gstatic.com generate_204
- Windows: msftconnecttest.com, msftncsi.com

--- a/configs/create-ap-hotspot.service
+++ b/configs/create-ap-hotspot.service
@@ -6,6 +6,7 @@ Wants=shellinabox.service
 [Service]
 Type=forking
 ExecStart=/usr/bin/create_ap wlan0 end0 jailbreakBox --no-virt --daemon
+ExecStartPost=/usr/local/bin/setup-captive-portal-dns.sh
 ExecStop=/usr/bin/create_ap --stop wlan0
 Restart=on-failure
 RestartSec=5
